--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="http://127.0.0.1:8000/static/imgs/ya.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://kz-api.tk/blog/static/imgs/ya.ico" type="image/x-icon">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet"
         href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
